# predictable

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  make_docs.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  publish.yaml  pytest.yaml
divinate/core/: discounting.py  flows.py  model.py  precision.py
divinate/tests/: test_discounting.py  test_flows.py
divination/: __init__.py
divination/core/: base.py  discounting.py  flows.py  model.py
divination/tests/: test_discounting.py  test_flows.py  test_model.py  test_precision.py
docs/: api.md  api.rst  conf.py  contributing.md  getting_started.md  index.md  index.rst  installation.md  reference.md  requirements.txt  usage.rst
examples/: model.py  modelpoints.csv  rpt.py  run.py  simple_model.py
examples/input/: modelpoints.csv  modelpoints.rpt
examples/tables/: economic.csv  lapses.csv  sa8990.csv
predictable/: __init__.py  __main__.py
predictable/cli/: __init__.py  scaffold.py
predictable/core/: discounting.py  flows.py  io.py  lookup.py
requirements/: dev.txt
src/divinate/: __init__.py
src/divinate/core/: discounting.py  flows.py  model.py  precision.py  rating.py  rating_factors.py  risk.py
src/divinate/engine/: run_settings.py  runner.py
src/predictable/: __init__.py
src/predictable/core/: flows.py  lookup.py  model.py  rating_factors.py
src/predictable/engine/: run.py
tests/: test_discounting.py  test_flows.py  test_lookup.py  test_model.py  test_precision.py  test_run.py
