[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "predictable"
description = "A framework for actuarial modelling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ratul Maharaj", email = "ratulmaharaj@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy==1.24.3", "pandas==2.0.1", "pydantic==1.10.7", "pre-commit==3.3.1"]
dynamic = ["version"]
keywords = ["actuarial", "modelling", "financial services", "python", "predictable"]

[project.urls]
"Bug Tracker" = "https://github.com/RatulMaharaj/predictable/issues"
homepage = "https://github.com/RatulMaharaj/predictable"
documentation = "https://predictable.readthedocs.io"

[tool.hatch.version]
path = "src/predictable/__init__.py"

[tool.hatch.envs.default]
post-install-commands = ["pre-commit install"]

[tool.hatch.envs.default.scripts]
test = "hatch run test:test"
docs = "hatch run docs:make"

# Test environment
[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
test = "pytest"

# Docs environment
[tool.hatch.envs.docs]
dependencies = ["sphinx", "sphinx-copybutton", "sphinxext-opengraph", "myst-parser", "furo"]

[tool.hatch.envs.docs.scripts]
make = "source make_docs.sh"


[tool.black]
line-length = 79
include = "\\.pyi?$"
exclude = "/(\n    \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"
