[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["predictable"]

[project]
name = "predictable"
description = "A framework for actuarial modelling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ratul Maharaj", email = "ratulmaharaj@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = ["numpy==1.24.3", "pandas==2.0.1", "pydantic==1.10.7"]
dynamic = ["version"]
keywords = [
  "actuarial",
  "modelling",
  "financial services",
  "python",
  "predictable",
]

[project.urls]
"Bug Tracker" = "https://github.com/RatulMaharaj/predictable/issues"
homepage = "https://github.com/RatulMaharaj/predictable"
documentation = "https://predictable.readthedocs.io"

[project.scripts]
predictable = "predictable.cli:cli"

[tool.hatch.version]
path = "predictable/__init__.py"

[tool.hatch.envs.default.scripts]
test = "hatch run test:test"
lint = "hatch run dev:lint"
format = "hatch run dev:format"
example = "python examples/rpt.py"

[tool.hatch.envs.dev]
post-install-commands = ["pre-commit install"]

[tool.hatch.envs.dev.scripts]
lint = "ruff check ."
format = "black ."

# Test environment
[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
test = "pytest"

# Docs environment
[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "sphinx-copybutton",
  "sphinxext-opengraph",
  "myst-parser",
  "furo",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build"
serve = ["cd docs/_build/html && python -m http.server"]

# Formatter settings
[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = "/(\n    \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n | _build\n  | buck-out\n | build\n | venv\n  | dist\n)/\n"

# Linter settings
[tool.ruff]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
